paperless-ngx/kubernetes/traefik-ds.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
      - name: traefik-ingress-lb
        image: traefik:latest
        imagePullPolicy: Always
        args:
          - --api
          - --kubernetes
          - --logLevel=INFO
          - --ping
          - --ping.entrypoint=hc
          - --entryPoints=Name:https Address::443 TLS
          - --entryPoints=Name:http Address::80 Redirect.EntryPoint:https
          - --entryPoints=Name:hc Address::8000
          - --defaultentrypoints=https
          - --sendanonymoususage=true
        ports:
          - name: http
            containerPort: 80
            hostPort: 80
          - name: https
            containerPort: 443
            hostPort: 443
          - name: admin
            containerPort: 8080
          - name: hc
            containerPort: 8000
        livenessProbe:
          httpGet:
            path: /ping
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /ping
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 3
        resources:
          limits:
            cpu: 50m
            memory: 100Mi
          requests:
            cpu: 50m
            memory: 100Mi
        securityContext:
          capabilities:
            add: ["NET_BIND_SERVICE"]
            drop: ["ALL"]
      terminationGracePeriodSeconds: 60
