paperless-ngx/kubernetes/gotenberg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotenberg
  namespace: paperless-ngx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gotenberg
  template:
    metadata:
      labels:
        app: gotenberg
    spec:
      containers:
        - name: gotenberg
          image: gotenberg/gotenberg:8.7
          args:
            - "gotenberg"
            - "--chromium-disable-javascript=true"
            - "--chromium-allow-list=file:///tmp/.*"
---
apiVersion: v1
kind: Service
metadata:
  name: gotenberg
  namespace: paperless-ngx
spec:
  type: ClusterIP
  selector:
    app: gotenberg
  ports:
    - name: gotenberg
      port: 3000
      targetPort: 3000
