paperless-ngx/kubernetes/paperless.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-webserver
  namespace: paperless-ngx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-webserver
  template:
    metadata:
      labels:
        app: paperless-webserver
    spec:
      containers:
        - name: webserver
          image: ghcr.io/paperless-ngx/paperless-ngx:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: data
              mountPath: /usr/src/paperless/data
            - name: media
              mountPath: /usr/src/paperless/media
            - name: export
              mountPath: /usr/src/paperless/export
            - name: consume
              mountPath: /usr/src/paperless/consume
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
        - name: export
          persistentVolumeClaim:
            claimName: export-pvc
        - name: consume
          persistentVolumeClaim:
            claimName: consume-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-webserver
  namespace: paperless-ngx
spec:
  type: LoadBalancer
  selector:
    app: paperless-webserver
  ports:
    - name: http
      port: 8000
      targetPort: 8000
