paperless-ngx/kubernetes/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: paperless-ngx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: postgres:16
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: pgdata-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: paperless-ngx
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
